# pilatesbyriven

./: .gitignore  README.md  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
claude-cookbooks-main/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  authors.yaml  lychee.toml  pyproject.toml  registry.yaml  tox.ini
claude-cookbooks-main/.claude/agents/: code-reviewer.md
claude-cookbooks-main/.claude/commands/: add-registry.md  notebook-review.md  review-issue.md  review-pr-ci.md  review-pr.md
claude-cookbooks-main/.github/: ISSUE_GUIDELINES.md  authors_schema.json  pull_request_template.md  registry_schema.json
claude-cookbooks-main/.github/ISSUE_TEMPLATE/: bug_report.yml  (+3 more)
claude-cookbooks-main/claude_agent_sdk/: 00_The_one_liner_research_agent.ipynb  01_The_chief_of_staff_agent.ipynb  02_The_observability_agent.ipynb  03_The_site_reliability_agent.ipynb  README.md  pyproject.toml
claude-cookbooks-main/coding/: prompting_for_frontend_aesthetics.ipynb
claude-cookbooks-main/extended_thinking/: extended_thinking.ipynb  extended_thinking_with_tool_use.ipynb
claude-cookbooks-main/finetuning/: finetuning_on_bedrock.ipynb
claude-cookbooks-main/misc/: batch_processing.ipynb  building_evals.ipynb  building_moderation_filter.ipynb  generate_test_cases.ipynb  how_to_enable_json_mode.ipynb  how_to_make_sql_queries.ipynb  metaprompt.ipynb  pdf_upload_summarization.ipynb  prompt_caching.ipynb  read_web_pages_with_haiku.ipynb  sampling_past_max_tokens.ipynb  session_memory_compaction.ipynb  speculative_prompt_caching.ipynb  using_citations.ipynb
claude-cookbooks-main/multimodal/: crop_tool.ipynb  getting_started_with_vision.ipynb  how_to_transcribe_text.ipynb  reading_charts_graphs_powerpoints.ipynb  using_sub_agents.ipynb
claude-cookbooks-main/observability/: usage_cost_api.ipynb
claude-cookbooks-main/scripts/: test_notebooks.py  validate_all_notebooks.py  validate_authors_sorted.py  validate_notebooks.py
claude-cookbooks-main/skills/: .env.example  README.md  skill_utils.py
claude-cookbooks-main/tests/: __init__.py  conftest.py
claude-cookbooks-main/tool_evaluation/: tool_evaluation.ipynb
claude-cookbooks-main/tool_use/: .env.example  automatic-context-compaction.ipynb  calculator_tool.ipynb  customer_service_agent.ipynb  extracting_structured_json.ipynb  memory_cookbook.ipynb  parallel_tools.ipynb  programmatic_tool_calling_ptc.ipynb  requirements.txt  tool_choice.ipynb  tool_search_alternate_approaches.ipynb  tool_search_with_embeddings.ipynb  tool_use_with_pydantic.ipynb  vision_with_tools.ipynb
(+127 files in other folders)
